[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "WhereMyTunnels"
version = "1.1.0"
description = "Tool for viewing SSH connections"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "attrs",
    "psutil",
    "rich",
]

[project.optional-dependencies]
dev = [
    "nuitka",
    "pytest",
    "ruff",
]

[tool.ruff]
target-version = "py313"
line-length = 120
select = [
    "E", # Pycodestyle errors
    "F", # Pyflakes
    "I", # Isort
    "PL", # Pylint
    "UP", # Pyupgrade
]

[tool.pylint.format]
max-line-length = 120

[tool.setuptools]
packages = ["where_my_tunnels"]